# h3-duckdb

./: CMakeLists.txt  Makefile
.github/workflows/: Linux.yml  MacOS.yml  NodeJS.yml  Windows.yml
scripts/: extension-upload.sh
src/: h3_extension.cpp
src/include/: h3_extension.hpp
test/sql/: h3_functions_directededge.test  h3_functions_hierarchy.test  h3_functions_indexing.test  h3_functions_inspection.test  h3_functions_traversal.test  h3_functions_vertex.test
